# rum

./: .gitignore  .markdownlint.yaml  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  justfile
.github/: actionlint.yaml  dependabot.yml  zizmor.yml
.github/ISSUE_TEMPLATE/: 1_bug_report.yaml  2_question.yaml
.github/workflows/: ci.yml
benches/: delete.rs
scripts/: benchmark.sh
src/: lib.rs  main.rs
tests/it/: help.rs  main.rs  version.rs
tests/it/common/: mod.rs
tests/it/remove/: dirs.rs  errors.rs  files.rs  mod.rs
